--- a/html/index.html
+++ b/html/index.html
@@ -38,11 +38,11 @@
         </div>
       </nav>
 
-      <div class="vh-100" id="about-grid">
+      <div class="container vh-100" id="about-grid">
         
         <div class="row">  
           <div class="col-sm" > 
-            <figure class="container mx-auto" style="width: 250px;" >
+            <figure class="mx-auto" style="width: 250px;" >
                 <img src="../src/immagine_profilo.jpg" class="figure-img img-fluid rounded-circle mx-auto" alt="Matteo Cavagnino" >
             </figure>
           </div>
